--- a/client/app/admin/index.html
+++ b/client/app/admin/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+         <link rel="stylesheet" type="text/css" href="../bower_components/sweetalert/lib/sweet-alert.css">
 
         <!-- Our Website CSS Styles -->
         <!-- MetisMenu CSS -->
@@ -46,8 +47,11 @@
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="../bower_components/angular-resource/angular-resource.js"></script>
+        <script src="../bower_components/sweetalert/lib/sweet-alert.min.js"></script>
+      
         <!-- Our Website Javascripts -->
         <script src="eli-admin.js"></script>
+            <script src="directives/sweetAlert.js"></script>
             <!--auth-->
           <!--LogIn-->
           <script src="auth/views/logIn/logIn.js"></script>
