--- a/client/app/admin/index.html
+++ b/client/app/admin/index.html
@@ -32,7 +32,7 @@
     <body ng-app="eli.admin" ng-controller="LogInCtrl">
 
         <div id="wrapper">
-            <div ng-controller="NavCtrl" ng-show="ob.navShow==true" ng-include='"templates/navigation.html"'></div>
+            <div ng-controller="NavCtrl" ng-show="nav.show==true" ng-include='"templates/navigation.html"'></div>
             
 
                 <div ui-view></div>
