--- a/client/app/admin/index.html
+++ b/client/app/admin/index.html
@@ -45,6 +45,7 @@
         <script src="../bower_components/jquery/jquery.js"></script>
   
         <script src="../bower_components/angular/angular.js"></script>
+        <script src="../bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
         <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="../bower_components/angular-resource/angular-resource.js"></script>
         <script src="../bower_components/sweetalert/lib/sweet-alert.min.js"></script>
