--- a/client/app/index.html
+++ b/client/app/index.html
@@ -28,7 +28,7 @@
         <script src="client/app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="client/app/bower_components/angular-animate/angular-animate.js"></script>
          <script src="client/app/bower_components/angular-translate/angular-translate.js"></script>
-
+         <script src="client/app/bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
         <!-- app -->
         <script src="client/app/scripts/eli-app.js"></script>
         <!-- app -->
